--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Koa web server with oAuth",
   "main": "app.js",
   "dependencies": {
+    "@koa/router": "^9.3.1",
     "axios": "^0.19.2",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
