--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@koa/router": "^9.3.1",
     "axios": "^0.19.2",
     "koa": "^2.13.0",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-mount": "^4.0.0",
     "koa-qs": "^3.0.0",
-    "koa-router": "^9.1.0",
     "koa-session": "^6.0.0",
+    "koa-static": "^5.0.0",
+    "nedb-async": "^0.1.3",
     "querystring": "^0.2.0"
   },
   "devDependencies": {
